fixing header to be responsive on tablet

--- a/wp-content/themes/unity-core/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/unity-core/resources/assets/styles/common/_global.scss
@@ -25,7 +25,7 @@ body {
 .flex {
   display: flex;
 
-  @media #{$small-and-down} {
+  @media #{$medium-and-down} {
     flex-wrap: wrap;
   }
 }
